@@ -26,7 +26,7 @@
 			<artifactId>jzy3d-core</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-		<!--<dependency> <groupId>org.jzy3d</groupId> <artifactId>jzy3d-native-jogl-awt</artifactId> 
+		<!--<dependency> <groupId>org.jzy3d</groupId> <artifactId>jzy3d-native-jogl-awt</artifactId>
 			<version>${project.version}</version> </dependency> -->
 		<dependency>
 			<groupId>org.jzy3d</groupId>
@@ -90,6 +90,26 @@
 					<compilerArgs>
 						<arg>--add-modules=jdk.incubator.foreign</arg>
 					</compilerArgs>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.0.0-M5</version>
+				<configuration>
+					<!-- Ensure stack trace get displayed -->
+					<trimStackTrace>false</trimStackTrace>
+
+					<!-- Parallel tests DISABLE PARALLEL TEST OTHERWISE CANVAS DO NOT UPDATE
+						PROPERLY (?!)
+						<parallel>classes</parallel> <useUnlimitedThreads>true</useUnlimitedThreads>
+						<forkCount>1</forkCount>-->
+
+					<!-- Configure Panama -->
+					<argLine>
+						-XstartOnFirstThread --enable-native-access=ALL-UNNAMED --add-modules jdk.incubator.foreign -Djava.library.path=.:/System/Library/Frameworks/OpenGL.framework/Versions/Current/Libraries/
+					</argLine>
 				</configuration>
 			</plugin>
 
